Added the update note status!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ h1 {
 
 p {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 15px;
+  text-align: center;
 }
 </style>
 </head>
@@ -21,6 +22,7 @@ p {
 
 <h1>NO</h1>
 <h1>Sara non ha ancora partorito</h1>
+<p>Aggiornato il: 20/01 alle 18.00</p>
 
 </body>
 </html>
