--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ p {
 <body>
 
 <h1>NO</h1>
-<h1>Sara non ha ancora partorito, ma il parto è in corso! </h1>
-<p>Aggiornato il: 22/01 alle 11.16</p>
+<h1>Sara ha partorito! Alice e Sara stanno bene, 2.96kg in 49 cm</h1>
+<p>Aggiornato il: 22/01 alle 12.15</p>
 
 </body>
 </html>
